refac: Fix spacing on Form component css

--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -28,27 +28,28 @@
   padding: 2vw;
 }
 
+.joke-option-header {
+  margin-bottom: 10%;
+}
+
 .joke-option-wrapper {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  margin: 1% 0;
-}
-
-.joke-option-header {
-  margin: 1.5%;
+  margin-bottom: 2.5%;
 }
 
 .joke-option {
   text-align: left;
-  margin: 4% 0 0 2.5%;
+  margin-right: 2.5%;
+  margin-left: 2.5%;
 }
 
 .button-wrapper {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  margin-top: 3.5vh;
+  margin-top: 6%;
 }
 
 .close-button {
